--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -23,6 +23,7 @@
     "cheerio": "^1.0.0-rc.12",
     "express": "^4.18.2",
     "node-libcurl": "^3.0.0",
+    "nodemon": "^2.0.21",
     "request": "^2.88.2",
     "uniq": "^1.0.1"
   }
