--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.3.4",
     "browserify": "^17.0.0",
     "cheerio": "^1.0.0-rc.12",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "node-libcurl": "^3.0.0",
     "nodemon": "^2.0.21",
